<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class ActividadAnimal extends Model
{
    protected $fillable = [
        'actividad_id',
        'animal_id',
    ];

    public function animal()
    {
        return $this->belongsTo('App\Models\Animal','animal_id');
    }

    public function actividad()
    {
        return $this->belongsTo('App\Models\Actividad','actividad_id');
    }
}
