<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class EspecieRecinto extends Model
{
    protected $fillable = [
        'especie_id',
        'recinto_id',
    ];
}
