<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Recinto extends Model
{
    protected $fillable = [
        'nombre',
        'capacidad',
        'clima',
    ];

    public function especierecinto()
    {
        return $this->belongsTo('App\Models\EspecieRecinto','especierecinto_id');
    }

    public function animalrecintos()
    {
        return $this->hasMany('App\Models\AnimalRecinto','recinto_id');
    }
}
